--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,20 +1,36 @@
 <%include ./partials/header %>
 
-
-<h1>Index Page!!</h1>
-
-
-<% blogs.forEach(function(blog){%>
-    <div>
-        <h2><%=blog.title%></h2>
-        <img src="<%=blog.image%>">
-        <span><%=blog.created%></span>
-        <p> <%= blog.body.substring(0, 100) %>...</p>
-        <a href="/blogs/<%= blog._id %>">Read More</a>
+<div class="ui container">
+    <div class="ui container">
+        <h1>Blog Posts</h1>        
+    </div>
+    <% blogs.forEach(function(blog){%>
+    <div class="ui main text container segment">
+        <div class="ui huge header"><%= blog.title %></div>
+        <div class="ui top attached ">
+            <div class="item">
+                <img class="ui centered rounded image" src="<%=blog.image%>">        
+                <div class="content">
+                    <span><%=blog.created.toDateString()%></span>        
+                </div>
+                <div class="description">
+                    <p> <%= blog.body.substring(0,100) %></p>        
+                    <!-- if this was <%- %> people would be able to insert java script or html text-->
+                </div>
+                <a href="/blogs/<%= blog._id %>">Read More</a>
+                
+            </div>    
         
-        
+        </div>
     </div>
 
+
 <% }) %>
+</div>
+
+
+
 
 <%include ./partials/footer %>
+
+
