--- a/views/show.ejs
+++ b/views/show.ejs
@@ -13,7 +13,8 @@
                 <p> <%= blog.body %></p>        
                 <!-- if this was <%- %> people would be able to insert java script or html text-->
             </div>
-            <form action="/blogs/<%= blog._id %>?_method=DELETE" method="POST">
+            <a class="ui orange basic button" href="/blogs/<%= blog._id %>/edit">Edit</a>
+            <form id="delete" action="/blogs/<%= blog._id %>?_method=DELETE" method="POST">
                 <button class="ui red basic button">
                     Delete
                 </button>
