--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,36 @@
-    <p>this is the footer</p>
-    </body>
+<br>
+<div class="ui inverted vertical footer segment">
+    <div class="ui center aligned container">
+        <div class="ui stackable inverted divided grid">
+            <div class="three wide column">
+                <div class="ui inverted link list">
+                    <a href="https://www.linkedin.com/in/felipemelloit/" target="_blank" class="item">
+                        <i class="linkedin icon"></i>LinkedIn</a>
+                </div>
+            </div>
+            <div class="three wide column">
+                <div class="ui inverted link list">
+                    <a href="https://github.com/FelipeMello" target="_blank" class="item">
+                        <i class="github icon"></i> GitHub</a>
+                </div>
+            </div>
+            <div class="three wide column">
+                <div class="ui inverted link list">
+
+                    <a href="mailto:felipe.silva.mello@gmail.com?subject=Subject&body=message%20goes%20here" class="item">
+                        <i class="envelope icon"></i>Email</a>
+                </div>
+            </div>
+            <div class="five wide column">
+                    <div class="ui inverted link list">
+    
+                            <h4 class="ui inverted header"><i class="file code outline icon"></i>Felipe Silva de Mello</h4>
+                    </div>
+                </div>
+        </div>
+
+    </div>
+</div>
+</body>
+
 </html>
